--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/main_moreLayerScrollView_button" />
 
+
+    <Button
+        android:text="各个ScrollView的比较"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/main_compare_button" />
+
 </LinearLayout>
