--- a/app/src/main/res/layout/item_toptab.xml
+++ b/app/src/main/res/layout/item_toptab.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textColor="#222"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:text="1111"
     android:gravity="center"
     android:orientation="vertical"/>
